# cs429-06-memory_allocator

./: CMakeLists.txt  README.MD  main.c
include/: best_fit.h  first_fit.h  worst_fit.h
libtdmm/: CMakeLists.txt  tdmm.c
src/: best_fit.c  first_fit.c  worst_fit.c
